--- a/index.html
+++ b/index.html
@@ -212,6 +212,15 @@
                     </div>
                 </div>
                 <div class="blog-card">
+                    <div class="blog-image" style="background-image: url('images/blog1.jpg');"></div>
+                    <div class="blog-content">
+                        <span class="blog-category">Review</span>
+                        <h3>Top 5 Wireless Earbuds of 2023</h3>
+                        <p>We tested 25 different models to bring you the absolute best options at every price point.</p>
+                        <a href="#" class="read-more">Read More <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                </div>
+                <div class="blog-card">
                     <div class="blog-image" style="background-image: url('images/blog2.jpg');"></div>
                     <div class="blog-content">
                         <span class="blog-category">Guide</span>
